--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "source-map-loader": "^0.2.4",
     "style-loader": "^1.2.1",
     "ts-loader": "^7.0.3",
+    "tslint": "^6.1.2",
     "typescript": "^3.8.3",
     "url-loader": "^4.1.0",
     "webpack": "^4.43.0",
