Created and adds all route to app

--- a/tslint.yaml
+++ b/tslint.yaml
@@ -6,6 +6,7 @@ rules:
     new-parens: true
     no-arg: true
     no-bitwise: true
+    no-string-literal: false
     no-conditional-assignment: true
     no-consecutive-black-line: false
     no-console:
