Created pages: documents, leaderships, licences, news. Add function for works with data. Add yandex map to main page

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "web:dev": "webpack-dev-server --progress",
+    "build": "webpack --mode production",
     "tslint:scan": "tslint --project tsconfig.json --config tslint.yaml --force",
     "tslint:fix": "tslint --project tsconfig.json --config tslint.yaml --fix"
   },
