--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
+    "react-reveal": "^1.2.2",
     "react-router-dom": "^5.1.2",
     "react-transition-group": "^4.4.1",
     "react-yandex-maps": "^4.4.0",
