--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@material-ui/icons": "^4.9.1",
     "axios": "^0.19.2",
     "classnames": "^2.2.6",
+    "html-react-parser": "^0.13.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
