Adding postcss plugin, style sizing components

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "This official site the company AO NPK ALTEN",
   "main": "index.js",
   "scripts": {
-    "web:dev": "webpack-dev-server --progress",
+    "web:dev": "webpack-dev-server --config webpack.dev.config.js --progress",
     "build": "webpack --mode production",
     "tslint:scan": "tslint --project tsconfig.json --config tslint.yaml --force",
     "tslint:fix": "tslint --project tsconfig.json --config tslint.yaml --fix"
@@ -40,17 +40,24 @@
     "@types/react-helmet": "^6.1.0",
     "@types/react-redux": "^7.1.9",
     "@types/react-router-dom": "^5.1.5",
+    "autoprefixer": "^9.8.6",
     "babel-loader": "^8.1.0",
     "css-loader": "^3.5.3",
+    "css-mqpacker": "^7.0.0",
+    "cssnano": "^4.1.10",
     "csstype": "^2.6.10",
     "fibers": "^5.0.0",
     "file-loader": "^6.0.0",
     "html-webpack-plugin": "^4.3.0",
+    "mini-css-extract-plugin": "^0.11.2",
     "node-sass": "^4.14.1",
+    "postcss": "^7.0.32",
+    "postcss-loader": "^4.0.1",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
     "source-map-loader": "^0.2.4",
     "style-loader": "^1.2.1",
+    "terser-webpack-plugin": "^4.2.0",
     "ts-loader": "^7.0.3",
     "tslint": "^6.1.2",
     "typescript": "^3.8.3",
