Added: base, dev, build webpack config files

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
         "inlineSourceMap": true,
         "lib": ["DOM", "ES6"],
         "noImplicitAny": false,
-        "outDir": "./dist"
+        "outDir": "build"
     },
     "include": ["src/**/*"],
     "exclude": ["node_modules", "**/*.spec.ts"]
