--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "alten-web-site",
   "version": "1.0.0",
   "description": "This official site the company AO NPK ALTEN",
-  "main": "index.js",
+  "main": "index.jsx",
   "scripts": {
-    "web:dev": "webpack-dev-server --config webpack.dev.config.js --progress",
-    "build": "webpack --mode production",
+    "dev": "webpack-dev-server --config ./webpack/webpack.dev.config.js --progress",
+    "build": "webpack --config ./webpack/webpack.build.config.js",
     "tslint:scan": "tslint --project tsconfig.json --config tslint.yaml --force",
     "tslint:fix": "tslint --project tsconfig.json --config tslint.yaml --fix",
     "tests": "jest",
@@ -29,7 +29,7 @@
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.1.2",
     "react-transition-group": "^4.4.1",
-    "react-yandex-maps": "^4.4.0",
+    "react-yandex-maps": "^4.5.0",
     "redux": "^4.0.5"
   },
   "devDependencies": {
@@ -47,6 +47,8 @@
     "@types/react-test-renderer": "^16.9.3",
     "autoprefixer": "^9.8.6",
     "babel-loader": "^8.1.0",
+    "clean-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^6.1.1",
     "css-loader": "^3.5.3",
     "css-mqpacker": "^7.0.0",
     "cssnano": "^4.1.10",
@@ -74,8 +76,9 @@
     "url-loader": "^4.1.0",
     "webpack": "^4.43.0",
     "webpack-bundle-analyzer": "^3.7.0",
-    "webpack-cli": "^3.3.11",
+    "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.10.3",
+    "webpack-merge": "^5.1.4",
     "why-did-you-update": "^1.0.8"
   }
 }
