--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,18 @@
 {
     "presets": [
-        "@babel/preset-env",
+        [
+            "@babel/preset-env",
+            {
+                "modules": false
+            }
+        ],
         "@babel/preset-react"
+    ],
+    "plugins": [
+        "@babel/plugin-transform-strict-mode",
+        "@babel/plugin-syntax-dynamic-import",
+        ["transform-remove-console", {"exclude": ["error", "warn"]}],
+        ["@babel/plugin-transform-runtime", { "regenerator": true }],
+        ["@babel/plugin-transform-modules-commonjs", { "loose": true }]
     ]
 }
