--- a/package.json
+++ b/package.json
@@ -17,23 +17,21 @@
   },
   "license": "ISC",
   "dependencies": {
-    "@material-ui/core": "^4.9.13",
-    "@material-ui/icons": "^4.9.1",
-    "axios": "^0.19.2",
     "classnames": "^2.2.6",
     "html-react-parser": "^0.13.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-helmet": "^6.1.0",
+    "react-loadable": "^5.5.0",
     "react-redux": "^7.2.0",
-    "react-reveal": "^1.2.2",
     "react-router-dom": "^5.1.2",
-    "react-transition-group": "^4.4.1",
-    "react-yandex-maps": "^4.5.0",
     "redux": "^4.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.9.6",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/plugin-transform-modules-commonjs": "^7.10.4",
+    "@babel/plugin-transform-runtime": "^7.11.5",
+    "@babel/plugin-transform-strict-mode": "^7.10.4",
     "@babel/preset-env": "^7.9.6",
     "@babel/preset-react": "^7.9.4",
     "@types/classnames": "^2.2.10",
@@ -42,11 +40,13 @@
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.7",
     "@types/react-helmet": "^6.1.0",
+    "@types/react-loadable": "^5.5.3",
     "@types/react-redux": "^7.1.9",
     "@types/react-router-dom": "^5.1.5",
     "@types/react-test-renderer": "^16.9.3",
     "autoprefixer": "^9.8.6",
     "babel-loader": "^8.1.0",
+    "babel-plugin-transform-remove-console": "^6.9.4",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^6.1.1",
     "css-loader": "^3.5.3",
@@ -58,6 +58,7 @@
     "file-loader": "^6.0.0",
     "html-webpack-plugin": "^4.3.0",
     "jest": "^26.4.2",
+    "lodash-webpack-plugin": "^0.11.5",
     "mini-css-extract-plugin": "^0.11.2",
     "node-sass": "^4.14.1",
     "postcss": "^7.0.32",
