--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@types/react-redux": "^7.1.9",
     "@types/react-router-dom": "^5.1.5",
     "@types/react-test-renderer": "^16.9.3",
+    "@types/remote-redux-devtools": "^0.5.4",
     "autoprefixer": "^9.8.6",
     "babel-loader": "^8.1.0",
     "babel-plugin-transform-remove-console": "^6.9.4",
@@ -65,6 +66,7 @@
     "postcss-loader": "^4.0.1",
     "react-addons-test-utils": "^15.6.2",
     "react-test-renderer": "^16.13.1",
+    "redux-devtools-extension": "^2.13.9",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
     "source-map-loader": "^0.2.4",
