--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-loadable": "^5.5.0",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "swiper": "^6.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.9.6",
