--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "redux": "^4.0.5",
+    "redux-saga": "^1.1.3",
     "swiper": "^6.6.1"
   },
   "devDependencies": {
@@ -44,6 +45,7 @@
     "@types/react-redux": "^7.1.9",
     "@types/react-router-dom": "^5.1.5",
     "@types/react-test-renderer": "^16.9.3",
+    "@types/redux-saga": "^0.10.5",
     "@types/remote-redux-devtools": "^0.5.4",
     "autoprefixer": "^9.8.6",
     "babel-loader": "^8.1.0",
