--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   },
   "license": "ISC",
   "dependencies": {
+    "@material-ui/core": "^4.11.4",
+    "@material-ui/icons": "^4.11.2",
     "classnames": "^2.2.6",
     "html-react-parser": "^0.13.0",
     "react": "^16.13.1",
