--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "scripts": {
     "dev": "webpack-dev-server --config ./webpack/webpack.dev.config.js --progress",
     "build": "webpack --config ./webpack/webpack.build.config.js",
-    "tslint:scan": "tslint --project tsconfig.json --config tslint.yaml --force",
-    "tslint:fix": "tslint --project tsconfig.json --config tslint.yaml --fix",
+    "eslint:check": "eslint --cache --ext .js,.jsx,.ts,.tsx src",
+    "eslint:dump": "",
+    "eslint:fix": "eslint src/** --fix",
     "test": "jest"
   },
   "author": {
@@ -49,6 +50,8 @@
     "@types/react-test-renderer": "^16.9.3",
     "@types/redux-saga": "^0.10.5",
     "@types/remote-redux-devtools": "^0.5.4",
+    "@typescript-eslint/eslint-plugin": "^4.28.0",
+    "@typescript-eslint/parser": "^4.28.0",
     "autoprefixer": "^9.8.6",
     "babel-loader": "^8.1.0",
     "babel-plugin-transform-remove-console": "^6.9.4",
@@ -59,6 +62,11 @@
     "cssnano": "^4.1.10",
     "csstype": "^2.6.10",
     "enzyme": "^3.11.0",
+    "eslint": "^7.29.0",
+    "eslint-plugin-promise": "^5.1.0",
+    "eslint-plugin-react": "^7.24.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-plugin-sonarjs": "^0.8.0-125",
     "fibers": "^5.0.0",
     "file-loader": "^6.0.0",
     "html-webpack-plugin": "^4.3.0",
@@ -66,13 +74,14 @@
     "lodash-webpack-plugin": "^0.11.5",
     "mini-css-extract-plugin": "^0.11.2",
     "node-sass": "^4.14.1",
-    "postcss": "^7.0.32",
+    "postcss": "^7.0.36",
     "postcss-loader": "^4.0.1",
     "react-addons-test-utils": "^15.6.2",
     "react-test-renderer": "^16.13.1",
     "redux-devtools-extension": "^2.13.9",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
+    "sonarjs": "^1.0.0",
     "source-map-loader": "^0.2.4",
     "style-loader": "^1.2.1",
     "terser-webpack-plugin": "^4.2.0",
